--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "devDependencies": {
     "babel-brunch": "~6.0.0",
     "brunch": "2.7.4",
+    "chai": "^3.5.0",
     "clean-css-brunch": "~2.0.0",
     "css-brunch": "~2.0.0",
     "elm-brunch": "^0.7.0",
     "javascript-brunch": "~2.0.0",
+    "node-elm-compiler": "^4.2.0",
+    "tmp": "0.0.31",
     "uglify-js-brunch": "~2.0.1"
   }
 }
