--- a/package.json
+++ b/package.json
@@ -1,24 +1,27 @@
 {
   "repository": {},
   "license": "MIT",
+  "main": "webpack.config.js",
   "scripts": {
     "deploy": "brunch build --production",
-    "watch": "brunch watch --stdin"
+    "watch": "webpack --watch-stdin --progress --color"
   },
   "dependencies": {
     "phoenix": "file:deps/phoenix",
     "phoenix_html": "file:deps/phoenix_html"
   },
   "devDependencies": {
-    "babel-brunch": "~6.0.0",
-    "brunch": "2.7.4",
+    "babel": "^6.5.2",
+    "babel-core": "^6.13.2",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.13.2",
+    "babel-preset-stage-2": "^6.13.0",
     "chai": "^3.5.0",
-    "clean-css-brunch": "~2.0.0",
-    "css-brunch": "~2.0.0",
-    "elm-brunch": "^0.7.0",
-    "javascript-brunch": "~2.0.0",
+    "elm-webpack-loader": "^3.1.0",
+    "file-loader": "^0.9.0",
+    "json-loader": "^0.5.4",
     "node-elm-compiler": "^4.2.0",
     "tmp": "0.0.31",
-    "uglify-js-brunch": "~2.0.1"
+    "webpack": "^2.1.0-beta.27"
   }
 }
