--- a/package.json
+++ b/package.json
@@ -17,10 +17,17 @@
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-stage-2": "^6.13.0",
     "chai": "^3.5.0",
+    "css-loader": "^0.26.1",
     "elm-webpack-loader": "^3.1.0",
+    "extract-text-webpack-plugin": "2.0.0-beta.4",
     "file-loader": "^0.9.0",
     "json-loader": "^0.5.4",
     "node-elm-compiler": "^4.2.0",
+    "postcss-cssnext": "^2.9.0",
+    "postcss-import": "^9.0.0",
+    "postcss-loader": "^1.2.0",
+    "postcss-url": "^5.1.2",
+    "style-loader": "^0.13.1",
     "tmp": "0.0.31",
     "webpack": "^2.1.0-beta.27"
   }
