--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "phoenix_html": "file:deps/phoenix_html"
   },
   "devDependencies": {
+    "autoprefixer": "^6.7.0",
     "babel": "^6.5.2",
     "babel-core": "^6.13.2",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-stage-2": "^6.13.0",
-    "chai": "^3.5.0",
+    "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.1",
     "elm-webpack-loader": "^3.1.0",
     "extract-text-webpack-plugin": "2.0.0-beta.4",
