--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "webpack.config.js",
   "scripts": {
     "deploy": "brunch build --production",
-    "watch": "webpack --watch-stdin --progress --color"
+    "watch": "webpack --watch-stdin --progress --color --watch"
   },
   "dependencies": {
     "phoenix": "file:deps/phoenix",
@@ -19,9 +19,9 @@
     "babel-preset-stage-2": "^6.13.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.1",
-    "elm-webpack-loader": "^3.1.0",
+    "elm-webpack-loader": "^4.2.0",
     "extract-text-webpack-plugin": "2.0.0-beta.4",
-    "file-loader": "^0.9.0",
+    "file-loader": "^0.10.0",
     "json-loader": "^0.5.4",
     "node-elm-compiler": "^4.2.0",
     "postcss-cssnext": "^2.9.0",
