--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "webpack.config.js",
   "scripts": {
     "deploy": "brunch build --production",
-    "watch": "webpack --watch-stdin --progress --color --watch"
+    "watch": "webpack --progress --color --watch"
   },
   "dependencies": {
     "phoenix": "file:deps/phoenix",
