--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "deploy": "brunch build --production",
     "watch": "webpack --progress --color --watch"
   },
+  "xo": {
+    "space": true
+  },
   "dependencies": {
     "phoenix": "file:deps/phoenix",
     "phoenix_html": "file:deps/phoenix_html"
@@ -22,6 +25,7 @@
     "elm-webpack-loader": "^4.2.0",
     "extract-text-webpack-plugin": "2.0.0-beta.4",
     "file-loader": "^0.10.0",
+    "font-awesome": "^4.7.0",
     "json-loader": "^0.5.4",
     "node-elm-compiler": "^4.2.0",
     "postcss-cssnext": "^2.9.0",
