--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "postcss-url": "^5.1.2",
     "style-loader": "^0.13.1",
     "tmp": "0.0.31",
+    "url-loader": "^0.5.7",
     "webpack": "^2.1.0-beta.27"
   }
 }
