--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "extract-text-webpack-plugin": "2.0.0-beta.4",
     "file-loader": "^0.10.0",
     "font-awesome": "^4.7.0",
+    "immutable-css": "^1.1.2",
     "json-loader": "^0.5.4",
     "node-elm-compiler": "^4.2.0",
     "postcss-cssnext": "^2.9.0",
     "postcss-import": "^9.0.0",
     "postcss-loader": "^1.2.0",
+    "postcss-reporter": "^3.0.0",
     "postcss-url": "^5.1.2",
     "style-loader": "^0.13.1",
     "tmp": "0.0.31",
